# ASRBP

./: .gitignore  CLAUDE.md  README.md  bootstrap_cache.py  future.md  pyproject.toml  scratch.txt
configs/: conformer_c16x.yaml  conformer_c2x.yaml  conformer_c2x_whisper.yaml  conformer_c4x.yaml  conformer_c8x.yaml  conformer_small.yaml
configs/bp/: bp_1x.yaml  bp_8x.yaml  bp_xa_16x.yaml
configs/cnns/: c16x.yaml  c2x.yaml  c2x_whisper.yaml  c32x.yaml  c32x_ctc4x.yaml  c4x.yaml  c4x_ctc_features.yaml  c8x.yaml
configs/xa/: xa_16x.yaml  xa_16x_no_ca.yaml  xa_32x.yaml
conformer_asr/: __init__.py  config.py  data.py  features.py  metrics.py  model.py  sb_lm.py  tokenizer.py  wandb_utils.py
conformer_asr/decoders/: __init__.py  bart.py
conformer_asr/downsamplers/: __init__.py  base.py  boundary.py  bp_xa.py  conv2d.py  cross_attn.py
conformer_asr/encoders/: __init__.py  mel_conformer.py  preproc.py  sdpa_patch.py
scripts/: download_librispeech.py  evaluate.py  prepare_tokenizer.py  preprocess.py  smoke_test.py  stage_to_local.sh  train.py  verify_xa_c16x_equivalence.py  verify_xa_c16x_train_equivalence.py
