[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conformer-asr"
version = "0.1.0"
description = "Conformer attention encoder-decoder ASR trained from scratch on LibriSpeech"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "transformers>=4.45",
    # datasets <3.0 keeps audio decoding on soundfile. datasets >=3.0 switched to
    # torchcodec, which forces tight torch/torchcodec version coupling
    # (torchcodec 0.11 needs torch 2.9, 0.7 needs torch 2.6, etc.). Stay below 3.0
    # unless you know your torch version matches an available torchcodec release.
    "datasets>=2.20,<3.0",
    "accelerate>=0.33",
    "evaluate>=0.4",
    "jiwer>=3.0",
    "sentencepiece>=0.2",
    "soundfile>=0.12",
    "librosa>=0.10",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tensorboard>=2.16",
    "tokenizers>=0.20",
    "wandb>=0.17",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
include = ["conformer_asr*"]
exclude = ["scripts*", "configs*"]
